--- a/Gooze/Base.lproj/Main.storyboard
+++ b/Gooze/Base.lproj/Main.storyboard
@@ -1216,6 +1216,7 @@
                         <segue destination="uqh-KR-Brq" kind="show" identifier="segueToTips" id="1t2-ls-MIf"/>
                         <segue destination="Dcf-Vz-JEP" kind="show" identifier="segueToRatings" id="aoX-cG-RKK"/>
                         <segue destination="7Gh-uh-gqy" kind="show" identifier="segueToPayment" id="VtY-qo-hTI"/>
+                        <segue destination="OWp-Sl-Whd" kind="show" identifier="segueToMyProfile" id="7Qg-7B-R48"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="V5c-ka-Vea" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -2939,6 +2940,7 @@
     <inferredMetricsTieBreakers>
         <segue reference="aoX-cG-RKK"/>
         <segue reference="YiG-yX-aa5"/>
+        <segue reference="7Qg-7B-R48"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
 </document>
