--- a/Gooze/Base.lproj/Main.storyboard
+++ b/Gooze/Base.lproj/Main.storyboard
@@ -125,8 +125,11 @@
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KCl-Tg-zlh">
                                                 <rect key="frame" x="114.5" y="24.5" width="91" height="21.5"/>
                                                 <subviews>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="USERNAME" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wRD-Ba-vpg">
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="USERNAME" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wRD-Ba-vpg" customClass="GZELabel" customModule="Gooze" customModuleProvider="target">
                                                         <rect key="frame" x="0.0" y="0.0" width="91" height="20.5"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="20.5" id="Nhw-YX-Cpn"/>
+                                                        </constraints>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                         <nil key="highlightedColor"/>
@@ -285,7 +288,6 @@
                                         <constraints>
                                             <constraint firstAttribute="trailing" secondItem="s75-Qo-WNT" secondAttribute="trailing" constant="10" id="6Yz-S8-72C"/>
                                             <constraint firstItem="s75-Qo-WNT" firstAttribute="top" secondItem="f84-C9-1rK" secondAttribute="bottom" constant="8" id="74e-26-k7m"/>
-                                            <constraint firstItem="KCl-Tg-zlh" firstAttribute="top" secondItem="P9F-hy-S2v" secondAttribute="top" constant="24" id="7mV-jC-kSM"/>
                                             <constraint firstItem="ncm-nO-qGJ" firstAttribute="leading" secondItem="P9F-hy-S2v" secondAttribute="leading" constant="10" id="8Ba-EG-eHS"/>
                                             <constraint firstItem="0me-qO-LLu" firstAttribute="leading" secondItem="P9F-hy-S2v" secondAttribute="leading" constant="10" id="8bX-QI-ZhX"/>
                                             <constraint firstItem="Fxf-KV-xlD" firstAttribute="top" secondItem="gim-DK-pdm" secondAttribute="bottom" constant="8" id="BOV-aJ-sU4"/>
@@ -329,6 +331,7 @@
                                             <constraint firstItem="heQ-9F-cZe" firstAttribute="trailing" secondItem="aot-uf-DTC" secondAttribute="trailing" id="uZW-Pw-Y6E"/>
                                             <constraint firstItem="aot-uf-DTC" firstAttribute="top" secondItem="KCl-Tg-zlh" secondAttribute="bottom" constant="16" id="ufW-tX-jHS"/>
                                             <constraint firstItem="WH8-fE-Qza" firstAttribute="leading" secondItem="aot-uf-DTC" secondAttribute="leading" id="wJf-vB-Box"/>
+                                            <constraint firstItem="KCl-Tg-zlh" firstAttribute="top" secondItem="P9F-hy-S2v" secondAttribute="top" constant="25" id="yha-2c-h4B"/>
                                             <constraint firstItem="s75-Qo-WNT" firstAttribute="leading" secondItem="P9F-hy-S2v" secondAttribute="leading" constant="10" id="zcZ-qx-0Jm"/>
                                             <constraint firstAttribute="bottom" secondItem="Yjq-v4-s2f" secondAttribute="bottom" id="zvS-M6-FJK"/>
                                             <constraint firstItem="0me-qO-LLu" firstAttribute="top" secondItem="lPV-Fn-VPs" secondAttribute="bottom" constant="8" id="zzD-Id-8kH"/>
@@ -406,6 +409,7 @@
                         <outlet property="scrollContentView" destination="P9F-hy-S2v" id="Lfi-D0-puH"/>
                         <outlet property="scrollView" destination="jgt-hf-4Co" id="ljb-rO-ZEL"/>
                         <outlet property="skipButton" destination="57Y-zh-rU7" id="pje-3a-aae"/>
+                        <outlet property="usernameContainer" destination="KCl-Tg-zlh" id="nQd-Bl-HRW"/>
                         <outlet property="usernameLabel" destination="wRD-Ba-vpg" id="iNu-BU-G8f"/>
                         <outlet property="viewBottomSpaceConstraint" destination="Tp7-sw-9zQ" id="KW1-3e-O59"/>
                         <outlet property="weightTextField" destination="ncm-nO-qGJ" id="ovF-DE-fEA"/>
@@ -2940,7 +2944,7 @@
     <inferredMetricsTieBreakers>
         <segue reference="aoX-cG-RKK"/>
         <segue reference="YiG-yX-aa5"/>
-        <segue reference="7Qg-7B-R48"/>
+        <segue reference="be1-y5-0kc"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
 </document>
